sign up page functions done and some styling detail, navbar styling detail, assets update

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@ html {
   scroll-behavior: smooth;
 }
 
+@layer components {
+  .button-general {
+    @apply w-full h-11 outline rounded-lg outline-1 flex justify-center items-center;
+  }
+  .field-input {
+    @apply w-full h-11 px-5 outline outline-1 outline-neutral-gray rounded-lg;
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
