--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,17 @@ html {
   }
 }
 
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+::-webkit-scrollbar-thumb {
+  background: #009b90;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
 body {
   margin: 0;
   padding: 0;
