--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html {
 
 @layer components {
   .button-general {
-    @apply h-11 rounded-lg outline outline-1 flex justify-center items-center;
+    @apply h-11 rounded-lg outline outline-1 flex justify-center items-center btn-plain;
   }
   .button-primary {
     @apply h-11 rounded-lg outline outline-1 flex justify-center items-center bg-primary hover:bg-primary-dark text-white font-bold btn-plain;
@@ -71,4 +71,31 @@ code {
 .btn-plain:active:focus {
   animation: none;
   transform: scale(var(--btn-focus-scale, 0.95));
+}
+
+.button-loading:before {
+  margin-right: 0.5rem;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 9999px;
+  border-width: 2px;
+  animation: spin 2s linear infinite;
+  content: "";
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-bottom-color: currentColor;
+  border-right-color: currentColor;
+}
+@media (prefers-reduced-motion: reduce) {
+  .button-loading:before {
+    animation: spin 10s linear infinite;
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
