minor fixes on week2

--- a/src/index.css
+++ b/src/index.css
@@ -50,19 +50,6 @@ code {
     monospace;
 }
 
-.btn {
-  @apply font-bold;
-}
-
-.btn-secondary:hover {
-  @apply bg-primary/20;
-}
-
-.btn-disabled:hover,
-.btn[disabled]:hover {
-  cursor: not-allowed;
-}
-
 .btn-plain {
   animation: button-pop var(--animation-btn, 0.25s) ease-out;
   transition-duration: 300ms;
@@ -98,4 +85,17 @@ code {
   to {
     transform: rotate(360deg);
   }
+}
+
+.bayangan-card {
+  box-shadow: -1px -1px 5px 4px rgba(0, 12, 54, 0.01),
+    2px 2px 2px rgba(33, 51, 96, 0.04), 4px 4px 4px 6px rgba(0, 155, 144, 0.04);
+}
+
+.bayangan-button {
+  box-shadow: 4px 0px 2px rgba(32, 51, 96, 0.01),
+    0px 4px 4px rgba(0, 0, 0, 0.03), 2px 2px 2px rgba(190, 190, 190, 0.08),
+    -2px -2px 2px rgba(190, 190, 190, 0.08),
+    -4px -4px 4px rgba(190, 190, 190, 0.06),
+    8px 8px 4px rgba(190, 190, 190, 0.06);
 }
