--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,12 @@ html {
   .field-input {
     @apply w-full h-11 px-5 outline outline-1 outline-neutral-gray rounded-lg;
   }
+  .button-left-bar {
+    @apply btn-plain hover:bg-gray-200 w-full h-24 flex justify-between items-center bg-white text-xl font-bold text-gray-400;
+  }
+  .sub-button-left-bar {
+    @apply btn-plain hover:bg-gray-200 w-full h-24 flex justify-center items-center bg-white font-semibold text-gray-400;
+  }
 }
 
 ::-webkit-scrollbar {
