--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ html {
     @apply btn-plain hover:bg-gray-200 w-full h-24 flex justify-between items-center bg-white text-xl font-bold text-gray-400;
   }
   .sub-button-left-bar {
-    @apply btn-plain hover:bg-gray-200 w-full h-24 flex justify-center items-center bg-white font-semibold text-gray-400;
+    @apply btn-plain hover:bg-gray-200 w-full h-12 flex justify-center items-center bg-white font-semibold text-gray-400 pointer-events-auto;
   }
 }
 
