--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,17 @@ html {
   scroll-behavior: smooth;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 ::-webkit-scrollbar {
   width: 2px;
   height: 2px;
