all done minor fix needed and upload

--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,10 @@
     @apply py-2 rounded-lg flex justify-center items-center btn-plain cursor-pointer text-sm;
   }
   .button-primary {
-    @apply py-2 rounded-lg outline outline-2 outline-primary flex justify-center items-center bg-primary hover:bg-primary-dark text-white font-bold btn-plain cursor-pointer text-sm;
+    @apply py-2 rounded-lg outline outline-2 outline-primary flex justify-center items-center bg-primary hover:bg-primary-dark text-white font-bold btn-plain cursor-pointer text-sm focus:outline-black focus:outline-2;
   }
   .button-outline {
-    @apply py-2 rounded-lg outline outline-2 outline-primary flex justify-center items-center bg-white hover:bg-primary/20 text-primary font-bold btn-plain cursor-pointer text-sm;
+    @apply py-2 rounded-lg outline outline-2 outline-primary flex justify-center items-center bg-white hover:bg-primary/20 text-primary font-bold btn-plain cursor-pointer text-sm focus:outline-black focus:outline-2;
   }
   .field-input {
     @apply w-full h-11 px-5 outline outline-1 outline-neutral-gray rounded-lg;
