--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,9 @@
   .sub-button-left-bar {
     @apply btn-plain hover:bg-gray-200 w-full h-12 flex justify-start px-4 items-center bg-white font-semibold text-gray-400 pointer-events-auto;
   }
+  .filter-search-bar {
+    @apply w-full h-full pl-5 rounded-l-lg focus:border-primary focus:border-2 focus:outline-none;
+  }
 }
 
 html {
